--- a/exo16/index.html
+++ b/exo16/index.html
@@ -33,6 +33,32 @@
                 </ul>
             </div>
         </div>
+        <div>
+            <h3>Race de chien</h3>
+            <div>
+                <label for="nomC">Nom :</label>
+                <input type="text" name="nomC" id="nomC"/>
+                <label for="raceC">Race</label>
+                <input type="text" name="raceC" id="raceC"/>
+                <label for="ageC">Age</label>
+                <input type="number" name="ageC" id="ageC"/>
+            </div>
+            <div>
+                <select id="selectC">
+                    <option value="">
+                        Choississez un chien
+                    </option>
+                </select>
+            </div>
+            <div>
+                <input type="button" value="valider" id="validC" />
+            </div>
+            <div>
+                <p id="textC">
+                    
+                </p>
+            </div>
+        </div>
     </div>
 </body>
 <script src="script.js"></script>
