--- a/tpNotes/index.html
+++ b/tpNotes/index.html
@@ -119,7 +119,7 @@
                                     </div>
                                 </div>
                                 <div class="text-end">
-                                    <button class="btn btn-outline-light" id="btn-submit" type="submit"><i class="bi bi-send"></i> Envoyer</button>
+                                    <button class="btn btn-outline-light" id="btn-ajout-note" type="submit"><i class="bi bi-send"></i> Envoyer</button>
                                 </div>
                             </div>
                         </div>
@@ -156,6 +156,9 @@
                                 </div> 
                             </div>
                         </div>
+                    </div>
+                    <div class="col-12">
+                        <p id="moyenne"></p>
                     </div>
                 </div>
                 <hr/>
