Exo produit/services

--- a/exo.html
+++ b/exo.html
@@ -11,7 +11,7 @@
     <h1>Récupération des saisies utilisateur depuis les champs input</h1>
 
     <input type="text" placeholder="nom" id="nom"/>
-    <input type="text" placeholder="prenom" id="prenom"/>
+    <input type="text" name="test" data-value="test" placeholder="prenom" id="prenom"/>
     <button id="valider">Ajouter</button>
 
     <div>
