--- a/Promise/index.html
+++ b/Promise/index.html
@@ -51,7 +51,8 @@
                             <th scope="col">Id</th>
                             <th scope="col">Titre</th>
                             <th scope="col">Description</th>
-                            <th scope="col">Action</th>
+                            <th scope="col" id="col-statut">Statut</th>
+                            <th scope="col" id="col-action">Action</th>
                         </tr>
                     </thead>
                     <tbody id="table">
